<resources>
    <string name="app_name">MediaFlashback</string>
    <string name="title_activity_library">Library</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_songs">Tracks</string>
    <string name="title_albums">Albums</string>
    <string name="title_mplayer">Music Player</string>
    <string name="title_artists">Artists</string>
    <string name="title_favorites">Favorites</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">No address found</string>
    <string name="service_not_available">Service is not available right now</string>
    <string name="title_activity_tracklist">TracklistActivity</string>

</resources>
