<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_songs"
        android:icon="@drawable/track"
        android:title="@string/title_songs"/>

    <item
        android:id="@+id/navigation_albums"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_albums"/>

    <item
        android:id="@+id/navigation_artists"
        android:icon="@drawable/favorite"
        android:title="@string/title_artists"/>

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/favorite"
        android:title="@string/title_favorites"/>


    <item
        android:id="@+id/navigation_mplayer"
        android:icon="@drawable/music_player"
        android:title="VIBE" />

</menu>
